test/embedded/basic-errors-no-stdlib.swift
// RUN: %target-swift-frontend -emit-ir -verify %s -parse-stdlib -enable-experimental-feature Embedded

public protocol Player {}
struct Concrete: Player {}

public func test() -> any Player {
  Concrete() // expected-error {{existential can cause metadata allocation or locks}}
  // expected-note@-1 {{called from here}}
}
